# thangkerne

./: .firebaserc  .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
content/jila-kaytetye-admin/: categories.csv  categories_entries.csv  entries.csv  image_credits.csv
media/dropbox/2015 04 13 Thangkerne_content/: Acknowledgements-Thangkerne.docx  GIT-workshop-group.tiff
media/dropbox/2015 11 27 published audio/: _thangkerne audio filenames.txt
output/: about.html  index.html
output/_assets/: grid.css  styles.css
output/entries/: aherrk-akwernenhe.html  akerrke.html  akngkwene.html  aleterrpe-terrpe.html  alpantywerle.html  amatheng-amathenge.html  arlpatye.html  arntepe.html  arrakwer-akwere.html  arrkarre.html  arwengerrpe.html  atetherre.html  aympaympe.html  eleterre-kame-kame.html  etnkwele.html  ilekaynewene.html  ilere.html  ilpertenye.html  kaperle-kaperle.html  karlatwerreye.html  karlayteng-aytenge.html  karnawilkere.html  kelelkelelke.html  kerrkerlantye.html  kwarlpatelk-alyelkelye.html  kwayekwaye.html  kwepalepale.html  kwerlekweke.html  kwerte-kwerte.html  lkwarrer-arrpwernenhe.html  nganke.html  ngimarre alarrewene.html  ngimarre.html  pelkere.html  pwelerrnge.html  rrpwere alkenhe.html  rtwere.html  test.html  therre-therre.html  twetime.html  (+3 more)
scripts/: build_html.py  build_index.py  helpers.py  prepare_media.py
templates/: about.html  entry.html  index-test.html  index.html  menu_highlight.css
templates/_assets/: grid.css  script.js  styles.css
(+1 files in other folders)
